[gd_scene load_steps=10 format=3 uid="uid://dqnaqj8yb6hwd"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ofpvf"]
[ext_resource type="Texture2D" uid="uid://2p2ttcpmrpij" path="res://assets/sprites/player.png" id="2_0edx5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vep0e"]
atlas = ExtResource("2_0edx5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekmiu"]
atlas = ExtResource("2_0edx5")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_61eur"]
atlas = ExtResource("2_0edx5")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrdfx"]
atlas = ExtResource("2_0edx5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bqk2"]
atlas = ExtResource("2_0edx5")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_81gkq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vep0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekmiu")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61eur")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrdfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bqk2")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d7nfa"]
size = Vector2(13, 18)

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
script = ExtResource("1_ofpvf")
metadata/_edit_horizontal_guides_ = [-19.0, 0.0]
metadata/_edit_vertical_guides_ = [-7.0, 6.0]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -11)
scale = Vector2(1, 1.375)
sprite_frames = SubResource("SpriteFrames_81gkq")
animation = &"jump"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -9)
shape = SubResource("RectangleShape2D_d7nfa")

[node name="Timers" type="Node" parent="."]

[node name="DashCooldown" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers"]

[node name="JumpBufferTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="DashTimer" type="Timer" parent="Timers"]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="Timers/DashCooldown" to="." method="dash_cooldown_timeout"]
[connection signal="timeout" from="Timers/CoyoteTimer" to="." method="coyote_timeout"]
[connection signal="timeout" from="Timers/JumpBufferTimer" to="." method="jump_buffer_timeout"]
[connection signal="timeout" from="Timers/DashTimer" to="." method="dash_timeout"]
